Fixed last name overlap

--- a/css/master.css
+++ b/css/master.css
@@ -61,7 +61,6 @@ html{
 
 /* Roller */
 #lastName {
-  margin-top: 30px;
   color: #E98074;
   font-stretch: expanded;
   font-size: 110px;
